--- a/app/src/main/res/menu/products_menu.xml
+++ b/app/src/main/res/menu/products_menu.xml
@@ -5,11 +5,9 @@
     <item android:id="@+id/prod_search"
         android:icon="@drawable/ic_baseline_search_24"
         android:title="Search"
-        app:showAsAction="always"/>
-    <item android:title="Cart"
-        android:icon="@drawable/ic_baseline_shopping_cart_24"
-        android:id="@+id/prod_cart"
-        app:showAsAction="always"/>
+        app:showAsAction="always|withText"
+        app:actionViewClass="android.widget.SearchView"
+        android:iconTint="@color/white"/>
 
     <item android:title="Profile"
         android:icon="@drawable/ic_baseline_login_24"
