--- a/app/src/main/res/layout/activity_laptop.xml
+++ b/app/src/main/res/layout/activity_laptop.xml
@@ -31,7 +31,6 @@
                 android:padding="3dp"
                 android:textSize="28sp"
                 android:textStyle="bold"
-                android:textColor="@color/black"
                 android:layout_marginTop="5dp"/>
 
             <LinearLayout
@@ -50,8 +49,7 @@
                     android:id="@+id/comp_supplier"
                     android:layout_weight="1"
                     android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"/>
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -59,7 +57,6 @@
                     android:id="@+id/comp_supplier_name"
                     android:text="Supplier Name"
                     android:layout_weight="3"
-                    android:textColor="@color/black"
                     android:textSize="20sp"/>
             </LinearLayout>
 
@@ -72,7 +69,6 @@
                 android:layout_marginTop="5dp"
                 android:textSize="28sp"
                 android:gravity="center"
-                android:textColor="@color/black"
                 android:textStyle="bold"/>
 
             <LinearLayout
@@ -91,8 +87,7 @@
                     android:id="@+id/comp_display"
                     android:layout_weight="1"
                     android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"/>
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -100,7 +95,6 @@
                     android:id="@+id/comp_screen_size"
                     android:text="15.2 Inches"
                     android:layout_weight="3"
-                    android:textColor="@color/black"
                     android:textSize="20sp"/>
             </LinearLayout>
 
@@ -120,8 +114,7 @@
                     android:id="@+id/comp_store"
                     android:layout_weight="1"
                     android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"/>
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -129,7 +122,6 @@
                     android:id="@+id/comp_storage"
                     android:text="8 GB RAM, 500GB ROM SSD"
                     android:layout_weight="3"
-                    android:textColor="@color/black"
                     android:textSize="20sp"/>
             </LinearLayout>
 
@@ -149,8 +141,7 @@
                     android:id="@+id/comp_proc"
                     android:layout_weight="1"
                     android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"/>
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -158,7 +149,6 @@
                     android:id="@+id/comp_processor"
                     android:text="Core i5, Dual Core, 2.4GHZ"
                     android:layout_weight="3"
-                    android:textColor="@color/black"
                     android:textSize="20sp"/>
             </LinearLayout>
 
@@ -178,8 +168,7 @@
                     android:id="@+id/comp_os"
                     android:layout_weight="1"
                     android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"/>
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -187,7 +176,6 @@
                     android:id="@+id/comp_operating_system"
                     android:text="Windows 11"
                     android:layout_weight="3"
-                    android:textColor="@color/black"
                     android:textSize="20sp"/>
             </LinearLayout>
 
@@ -207,8 +195,7 @@
                     android:id="@+id/comp_tch"
                     android:layout_weight="1"
                     android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"/>
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -216,7 +203,6 @@
                     android:id="@+id/comp_touch_screen"
                     android:text="No"
                     android:layout_weight="3"
-                    android:textColor="@color/black"
                     android:textSize="20sp"/>
             </LinearLayout>
 
@@ -236,8 +222,7 @@
                     android:id="@+id/comp_con"
                     android:layout_weight="1"
                     android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"/>
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -245,7 +230,6 @@
                     android:id="@+id/condition_view"
                     android:text="New"
                     android:layout_weight="3"
-                    android:textColor="@color/black"
                     android:textSize="20sp"/>
             </LinearLayout>
 
@@ -265,8 +249,7 @@
                     android:id="@+id/comp_price"
                     android:layout_weight="1"
                     android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"/>
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -274,7 +257,6 @@
                     android:id="@+id/price_view"
                     android:text="KSH 25000"
                     android:layout_weight="3"
-                    android:textColor="@color/black"
                     android:textSize="20sp"/>
             </LinearLayout>
 
@@ -283,7 +265,6 @@
                 android:layout_height="wrap_content"
                 android:text="Additional Info"
                 android:id="@+id/comp_add_info"
-                android:textColor="@color/black"
                 android:textStyle="bold"
                 android:textSize="30sp"
                 android:gravity="center"/>
@@ -293,7 +274,6 @@
                 android:layout_height="wrap_content"
                 android:text="Your Product Info"
                 android:id="@+id/comp_info"
-                android:textColor="@color/black"
                 android:textSize="20sp"/>
 
             <LinearLayout
