--- a/app/src/main/res/layout/activity_smart_phone.xml
+++ b/app/src/main/res/layout/activity_smart_phone.xml
@@ -30,7 +30,6 @@
                 android:padding="3dp"
                 android:textSize="28sp"
                 android:textStyle="bold"
-                android:textColor="@color/black"
                 android:layout_marginTop="5dp"/>
 
             <LinearLayout
@@ -48,8 +47,7 @@
                     android:text="Supplier"
                     android:layout_weight="1"
                     android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"/>
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -57,7 +55,6 @@
                     android:id="@+id/phone_supplier_name"
                     android:text="Supplier Name"
                     android:layout_weight="3"
-                    android:textColor="@color/black"
                     android:textSize="20sp"/>
             </LinearLayout>
 
@@ -70,7 +67,6 @@
                 android:layout_marginTop="5dp"
                 android:textSize="28sp"
                 android:gravity="center"
-                android:textColor="@color/black"
                 android:textStyle="bold"/>
 
             <LinearLayout
@@ -88,8 +84,7 @@
                     android:text="Color"
                     android:layout_weight="1"
                     android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"/>
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -97,7 +92,6 @@
                     android:id="@+id/phone_colour"
                     android:text="Black"
                     android:layout_weight="3"
-                    android:textColor="@color/black"
                     android:textSize="20sp"/>
             </LinearLayout>
 
@@ -115,7 +109,6 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Display"
-                    android:textColor="@color/black"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
@@ -125,7 +118,6 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
                     android:text="7 Inches"
-                    android:textColor="@color/black"
                     android:textSize="20sp" />
             </LinearLayout>
 
@@ -144,8 +136,7 @@
                     android:text="Storage (RAM, ROM)"
                     android:layout_weight="1"
                     android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"/>
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -153,7 +144,6 @@
                     android:id="@+id/phone_storage"
                     android:text="2 GB RAM, 8GB ROM"
                     android:layout_weight="3"
-                    android:textColor="@color/black"
                     android:textSize="20sp"/>
             </LinearLayout>
 
@@ -172,8 +162,7 @@
                     android:text="Battery"
                     android:layout_weight="1"
                     android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"/>
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -181,7 +170,6 @@
                     android:id="@+id/phone_battery_capacity"
                     android:text="5000mAh"
                     android:layout_weight="3"
-                    android:textColor="@color/black"
                     android:textSize="20sp"/>
             </LinearLayout>
 
@@ -200,8 +188,7 @@
                     android:text="Operating System"
                     android:layout_weight="1"
                     android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"/>
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -209,7 +196,6 @@
                     android:id="@+id/phone_operating_system"
                     android:text="Windows 11"
                     android:layout_weight="3"
-                    android:textColor="@color/black"
                     android:textSize="20sp"/>
             </LinearLayout>
 
@@ -228,8 +214,7 @@
                     android:text="Camera"
                     android:layout_weight="1"
                     android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"/>
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -237,7 +222,6 @@
                     android:id="@+id/phone_camera"
                     android:text="Front: 16MP Rear: 64MP"
                     android:layout_weight="3"
-                    android:textColor="@color/black"
                     android:textSize="20sp"/>
             </LinearLayout>
 
@@ -256,8 +240,7 @@
                     android:text="Condition"
                     android:layout_weight="1"
                     android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"/>
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -265,7 +248,6 @@
                     android:id="@+id/phone_condition"
                     android:text="Used/ New"
                     android:layout_weight="3"
-                    android:textColor="@color/black"
                     android:textSize="20sp"/>
             </LinearLayout>
 
@@ -284,8 +266,7 @@
                     android:text="Asking Price"
                     android:layout_weight="1"
                     android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"/>
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -293,7 +274,6 @@
                     android:id="@+id/phone_price"
                     android:text="KES 15000"
                     android:layout_weight="3"
-                    android:textColor="@color/black"
                     android:textSize="20sp"/>
             </LinearLayout>
 
@@ -302,7 +282,6 @@
                 android:layout_height="wrap_content"
                 android:text="Additional Info"
                 android:id="@+id/phone_add_info"
-                android:textColor="@color/black"
                 android:textStyle="bold"
                 android:textSize="30sp"
                 android:gravity="center"/>
@@ -312,7 +291,6 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/phone_info"
                 android:text="Your Product Info"
-                android:textColor="@color/black"
                 android:textSize="20sp"/>
 
             <LinearLayout
