--- a/app/src/main/res/layout/product_layout.xml
+++ b/app/src/main/res/layout/product_layout.xml
@@ -2,7 +2,9 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="150dp"
     android:layout_height="150dp"
-    android:layout_margin="3dp"
+    android:layout_marginTop="3dp"
+    android:layout_marginBottom="3dp"
+    android:layout_marginRight="3dp"
     android:padding="1dp">
 
     <RelativeLayout
@@ -23,8 +25,7 @@
             android:layout_below="@+id/product_image"
             android:layout_marginTop="5dp"
             android:text="Product Name"
-            android:textStyle="bold"
-            android:textColor="@color/black"/>
+            android:textStyle="bold"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -36,8 +37,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/product_price"
                 android:layout_weight="1"
-                android:text="KES"
-                android:textColor="@color/black"/>
+                android:text="KES"/>
 
         </LinearLayout>
     </RelativeLayout>
