--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -14,5 +14,6 @@
         <!-- Customize your theme here. -->
 
         <item name="android:textColor">?attr/colorPrimaryVariant</item>
+        <item name="iconTint">@color/white</item>
     </style>
 </resources>
